--- a/src/dune
+++ b/src/dune
@@ -1,8 +1,4 @@
 (executable
  (name main)
- (libraries 
-  ocaml-ci-api
-  current_rpc
-  capnp-rpc-unix
-  lwd 
-  nottui nottui-lwt nottui-widgets))
+ (libraries ocaml-ci-api current_rpc capnp-rpc-unix lwd nottui nottui-lwt
+   nottui-widgets))
