Update dune-project and ocaml-ci submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ocaml-ci"]
 	path = ocaml-ci
-	url = https://github.com/ocaml-ci/ocaml-ci.git
+	url = https://github.com/ocurrent/ocaml-ci.git
 [submodule "lwd"]
 	path = lwd
 	url = https://github.com/let-def/lwd.git
